<resources>
    <string name="app_name">Safe Tour Uzbekistan</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="homestay_uz">Homestay.uz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lists">lists</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="rent_adds">Rent adds</string>
    <string name="search_for_homestay_uz">Search for homestay.uz</string>
    <string name="homeoftext">homeOfText</string>
    <string name="price">price</string>
    <string name="comments">comments</string>
    <string name="textofhome">textOfHome</string>
    <string name="profile">Profile</string>
    <string name="add_profile_photo">Add profile photo</string>
    <string name="name">Name</string>
    <string name="profile_registration">Profile registration</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="number">Number</string>
    <string name="register">Register</string>
    <string name="Profile">Profile</string>
    <string name="give_your_adds">Give your Adds</string>
    <string name="skip">Skip</string>
    <string name="phone_number">Phone Number</string>
    <string name="uzbek_culture">Uzbek culture</string>
    <string name="safe_tour_uzbekistan">Safe tour Uzbekistan</string>
    <string name="search_for_safe_tour_uzbekistan">Search for safe tour Uzbekistan</string>
    <string name="safe_tour">Safe Tour</string>
    <string name="safe_Tour_Uzbekistan">Safe Tour Uzbekistan</string>
    <string name="foods">Foods</string>
    <string name="history">History</string>
    <string name="music_and_art">Music and Art</string>
    <string name="the_history_of_religion">The history of Religion</string>
    <string name="uzbekistan">Uzbekistan</string>
    <string name="google_search">google search</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="save">Save</string>
    <string name="modern_uzbekistan">Modern Uzbekistan</string>
    <string name="chinese">Chinese</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="japanese">Japanese</string>
    <string name="russian">Russian</string>
    <string name="korean">Korean</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="languages">Languages</string>
    <string name="log_out">Log Out</string>
    <string name="emergency_call">Emergency call</string>
    <string name="description">Description</string>
    <string name="_102">102</string>
    <string name="tour_police_aid">Tour Police aid</string>
    <string name="_103">103</string>
    <string name="medical_aid">Medical aid</string>
    <string name="additional_settings">Additional Settings</string>
    <string name="the_republic_of_uzbekistan">The Republic of Uzbekistan</string>
    <string name="fulldata">fullData</string>
    <string name="fulldataoforregions">fulldataoforregions</string>
    <string name="the_republic_of_karakalpakistan_and_regions">The Republic of Karakalpakistan and Regions</string>
    <string name="the_end_of_sovet_era">The end of Sovet era</string>
    <string name="beginning_of_independence">Beginning of Independence</string>
    <string name="dataforsovetera">dataforsovetera</string>
</resources>