<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_menu_home_id"
        android:icon="@drawable/ic_baseline_home_24"
        app:showAsAction="ifRoom"
        android:title="@string/home" />


    <item

        android:id="@+id/bottom_menu_favorite_id"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/favorites" />


    <item
        android:id="@+id/bottom_uzbek_culture_menu_id"
        android:icon="@drawable/ic_baseline_local_activity_24"
        android:title="@string/uzbek_culture" />


    <item

        android:id="@+id/bottom_menu_profile_id"
        android:icon="@drawable/ic_baseline_perm_identity_24"
        android:title="@string/profile" />

</menu>