<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".activities.SignInActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/gradient_font_splash"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="3dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/billabong"
                android:text="@string/safe_tour"
                android:textAllCaps="false"
                android:textColor="#FBC02D"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_edittext_into_sign_in_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="14sp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/profile_views"
                android:hint="@string/email"
                android:padding="7dp"
                android:singleLine="true"
                android:textAllCaps="false"
                android:textColorHint="#60000000"
                android:textSize="16sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/password_edittext_into_sign_in_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/profile_views"
                android:hint="@string/password"
                android:padding="7dp"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textAllCaps="false"
                android:textColorHint="#60000000"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/sign_in_textview_into_sign_in_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/profile_views"
                android:text="@string/sign_in"
                android:gravity="center_horizontal|center_vertical"
                android:padding="7dp"
                android:textAllCaps="false"
                android:textColor="#90000000"
                android:textSize="16sp"
                android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginStart="77dp"
        android:layout_marginTop="12sp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_you_have_an_account"
            android:textAllCaps="false"
            android:textColor="#90000000"
            android:textSize="14sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/sign_up_bellow_into_sign_in_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginStart="10sp"
            android:textAllCaps="false"
            android:textColor="#90000000"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>