<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center"
    android:padding="20sp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/profile_image"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">


        <TextView
            android:id="@+id/description_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emergency_call"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="12sp">

            <ImageView
                android:layout_width="24sp"
                android:layout_height="24sp"
                android:layout_marginEnd="6sp"
                android:background="@drawable/call_view_up"
                android:src="@drawable/ic_baseline_medical_services_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medical_aid"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/_103"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="12sp">

            <ImageView
                android:layout_width="24sp"
                android:layout_height="24sp"
                android:layout_marginEnd="6sp"
                android:background="@drawable/call_view_up"
                android:src="@drawable/ic_baseline_local_police_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tour_police_aid"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/_102"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/number_call_edittext_view_id"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginStart="16sp"
                android:layout_marginEnd="16sp"
                android:layout_marginBottom="20sp"
                android:background="@drawable/profile_views"
                android:hint="@string/number"
                android:inputType="phone"
                android:padding="7dp"
                android:textAllCaps="false"
                android:textColorHint="#8B000000"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12sp"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/make_phone_call_imageview_id"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/call_view_up"
                    android:src="@drawable/ic_baseline_local_phone_24" />

                <ImageView
                    android:id="@+id/cancel_phone_call_imageview_id"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="70dp"
                    android:background="@drawable/call_view_end"
                    android:src="@drawable/ic_baseline_call_end_24" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>