<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".activities.initial.SignUpActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_font_splash"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="3dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/billabong"
                android:text="@string/safe_tour"
                android:textAllCaps="false"
                android:textColor="#FBC02D"
                android:textSize="36sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="14sp"
                android:layout_marginEnd="8dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstname_edittext_into_sign_up_id"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/profile_views"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp"
                    android:textAllCaps="false"
                    android:textColorHint="#60000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8sp"
                android:layout_marginEnd="8dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edittext_into_sign_up_id"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/profile_views"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:textAllCaps="false"
                    android:textColorHint="#60000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8sp"
                android:layout_marginEnd="8dp"
                app:passwordToggleEnabled="true">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edittext_into_sign_up_id"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/profile_views"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:textAllCaps="false"
                    android:textColorHint="#60000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8sp"
                android:layout_marginEnd="8dp"
                app:passwordToggleEnabled="true">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password_edittext_into_sign_up_id"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/profile_views"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:textAllCaps="false"
                    android:textColorHint="#60000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/sign_up_textview_button_into_sign_up_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="18sp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/profile_views"
                android:gravity="center_horizontal|center_vertical"
                android:padding="7dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="#90000000"
                android:textSize="16sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="87dp"
                android:layout_marginTop="12sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textAllCaps="false"
                    android:textColor="#90000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sign_in_textview_button_into_sign_up_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="#90000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>