<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".activities.BottomMenuProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16sp"
                    android:gravity="end">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/onBoarding_skip_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/skip"
                        android:elevation="0dp"
                        android:layout_marginTop="8dp"
                        android:background="#ffffff"
                        android:textAllCaps="false"
                        android:textColor="#278CEF"
                        android:textSize="20sp"
                        android:textStyle="normal" />
                </LinearLayout>

            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="3dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/billabong"
                    android:text="@string/safe_tour_uzbekistan"
                    android:textAllCaps="false"
                    android:textColor="#FBC02D"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/onBoarding_firstName_id"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="14sp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/profile_views"
                    android:hint="@string/first_name"
                    android:padding="7dp"
                    android:singleLine="true"
                    android:textAllCaps="false"
                    android:textColorHint="#60000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/onBoarding_lastName_id"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10sp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/profile_views"
                    android:hint="@string/last_name"
                    android:padding="7dp"
                    android:singleLine="true"
                    android:textAllCaps="false"
                    android:textColorHint="#60000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/onBoarding_number_id"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10sp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/profile_views"
                    android:hint="@string/phone_number"
                    android:inputType="number"
                    android:padding="7dp"
                    android:singleLine="true"
                    android:textAllCaps="false"
                    android:textColorHint="#60000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />



            </LinearLayout>
        </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>