<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.modernUzbekistan.CurrentFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:adjustViewBounds="true"
                        android:padding="8dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/uzbek" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/the_republic_of_uzbekistan"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="12sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="12sp"
                        android:layout_marginBottom="8dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/full_data_for_country_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fulldata"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:textStyle="normal" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="250dp"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/uzbmap" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/the_republic_of_karakalpakistan_and_regions"
                                android:textAllCaps="false"
                                android:textColor="@color/black"
                                android:textSize="16sp"
                                android:textStyle="bold" />


                        </LinearLayout>
                        <TextView
                            android:layout_marginTop="10dp"
                            android:id="@+id/full_data_regions_for_country_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fulldataoforregions"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:textStyle="normal" />


                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>